# continuous_integration

./: CMakeLists.txt  FileReader_8h.html  FileReader_8h__dep__incl.dot  FileReader_8h__incl.dot  FileReader_8h_source.html  Integradora1_8cc.html  Integradora1_8cc__incl.dot  KMP_8h.html  KMP_8h__incl.dot  KMP_8h_source.html  LCS_8h.html  LCS_8h__incl.dot  LCS_8h_source.html  Palindrome_8h.html  Palindrome_8h__incl.dot  Palindrome_8h_source.html  classFileReader.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_90b6582f42644a6c7e4128e582c64e3a.html  files.html  globals.html  globals_func.html  integradora1_2CMakeLists_8txt.html
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cc
search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js
src/: CMakeLists.txt
src/integradora1/: CMakeLists.txt  Integradora1.cc  KMP.h  LCS.h  Palindrome.h  integradora1.cpp  integradora1.h  k.h  l.h
tests/: CMakeLists.txt  test_integradora1.cc  test_integradora1.cpp
